Add more detail description in the conclusion

--- a/experiments/visualize.ipynb
+++ b/experiments/visualize.ipynb
@@ -1432,7 +1432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusion: ** Except the **nbench_fp**, all the 92 benchmarks fall within our predicted speedup range **[-276.278268, 127.716328]**, and most of them (86) are in **[-6, 4]**.\n",
+    "**Conclusion: ** Except the **nbench_fp**, all the 92 benchmarks fall within our predicted speedup range **[-276.278268, 127.716328]**, and most of them (86) are in **[-6, 4]**, which has the length of variety **8**.\n",
     "\n",
     "**Question: ** Is it an acceptable emulational environment for the KV drive?"
    ]
