Fix cpu worth description in the notebook

--- a/experiments/benchmarking/visualize.ipynb
+++ b/experiments/benchmarking/visualize.ipynb
@@ -1149,7 +1149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We got the speedup boundary **from -276.278268 to 127.716328** by using parameters **--cpuset-cpus=1 --cpu-quota=1000 --cpu-period=10000**, which means the docker container gets **1% CPU worth of run-time every 10ms on cpu 1**."
+    "We got the speedup boundary **from -276.278268 to 127.716328** by using parameters **--cpuset-cpus=1 --cpu-quota=1000 --cpu-period=10000**, which means the docker container only uses **1ms CPU worth of run-time every 10ms on cpu 1** (See [cpu](https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/6/html/Resource_Management_Guide/sec-cpu.html) for more details)."
    ]
   },
   {
